--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -534,7 +534,7 @@ body {
 .app-sub-inner {
 	width: 100%;
 	height: 100%;
-	padding: 100px 0 100px 0;
+	padding: 80px 0 80px 0;
 	overflow: hidden;
 }
 
@@ -543,13 +543,18 @@ body {
 }
 
 .app-sub-content h1 {
-	font-family: Poppins;
-	font-size: 42px;
-	font-weight: 700;
-	color: #111111;
-	line-height: 1.2;
-	letter-spacing: -2px;
-	margin-bottom: 30px;
+  font-family: Poppins;
+  font-size: 42px;
+  font-weight: 700;
+  color: #1f5b3a;
+  text-shadow: 0px 1px 1px #fff;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+}
+
+.colored-heading {
+  color: #1f5b3a !important;
 }
 
 
@@ -1506,6 +1511,42 @@ label {
 .back-to-top:focus {
     color: #FFFFFF;
 }
+
+
+/* Countdown timer */
+#launchCountdownTimer {
+  margin-top: 25px;
+}
+
+div.cd-box {
+  text-align: center;
+  font-family: Poppins;
+	width: 120px;
+	background: #FFFFFF;
+	float: left;
+	padding: 4px 0 0 0;
+	margin: 20px 20px 0 0;
+	-webkit-box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);
+	-moz-box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);
+	box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);
+}
+
+div.cd-box span {
+  display: block;
+  height: 48px;
+  line-height: 48px;
+  font-size: 2em;
+}
+
+div.strings {
+	width: 100%;
+	height: auto;
+	padding: 4px 0;
+	background: #37a066;
+	color: #FFFFFF;
+  0.9em;
+}
+
 
 
 
